Fixed spacing

--- a/src/styles/components/_color-picker.scss
+++ b/src/styles/components/_color-picker.scss
@@ -65,7 +65,7 @@
   transition: all 0.3s;
   padding: 2px;
   border-radius: var(--neeto-ui-rounded-md);
-  // margin: 0 4px 4px 0;
+  margin: 0 0 0 1.25px;
 
   &.active {
     border-color: rgb(var(--neeto-ui-gray-500));
